fix styling when resizing & prevent overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,13 @@
 }
 
 html {
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 body {
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
   margin: 0 0.5em;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -23,7 +25,8 @@ code {
 }
 
 #root {
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 .mono {
